package com.example;

public class Level {
    Labyrinth labyrinth;
    GamePanel gp;
    Difficulty difficulty;
  /*  Collision collision = new Collision();

    //public void intializeLevel(difficulty, gp){
    //    labyrinth = new Labyrinth(gp.getMaxScreenCol(),gp.getMaxScreenRow(),difficulty, gp);
    //}

    public void update(){
        if(collision.checkTreasure())
            System.out.println("Player reached the treasure!");
    }

   */
}

